Fixed sidebar heading bug where heading would overlap sidebar

--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@
 
 #sidebar-heading-container{
     margin: 25px;
+    width: 80%;
 }
 
 #sidebar-heading{
